--- a/src/styles.css
+++ b/src/styles.css
@@ -150,7 +150,9 @@ code {
 }
 
 .bg-image {
-  background-image: url('https://images.unsplash.com/photo-1738996674608-3d2d9d8450a0?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-image: url('https://images.unsplash.com/photo-1488415032361-b7e238421f1b?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  /* background-image: url(''); */
+  /* background-image: url('https://images.unsplash.com/photo-1738996674608-3d2d9d8450a0?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
